--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -63,12 +63,12 @@ tasks:
       redis-server --daemonize yes
       gp sync-done setup
       ## additional vscode settings
-      mkdir -p /workspace/lila/.vscode/settings.json &&
+      mkdir -p /workspace/lila/.vscode &&
       cp -r /workspace/lila-gitpod/.vscode/settings.json /workspace/lila/.vscode/settings.json
       ## Switch editor to lila workspace
       open --reuse-window /workspace/lila
   - name: search-setup
-    command:
+    command: |
       gp sync-await setup
       echo "search.enabled = true" >> /workspace/lila/conf/application.conf
       git clone https://github.com/lichess-org/lila-search /workspace/lila-search
